# Floral

./: README.md  flowers_convnet_example.py  setup.cfg
examples/: batching_example.py  visual_test.py
experiments/: batch_experiment.py  convolution_experiment.py  experiment.py  idea.txt
flora/: LISCENSE.txt  README.md  experiment.py  graph.py  loss.py  nn.py  optim.py  setup.cfg  test.py
flora/scripts/: batching_example.py
flora/src/: datasets.py  experiment.html  graph.py  loss.py  mnist_example.py  nn.py  test.py  test_nn.py  visual.py  visualization_example.ipynb
flora/src/.ipynb_checkpoints/: visualization_example-checkpoint.ipynb
flora/src/graph_visualizations/: out.html
scripts/: autograd_experiment.py
src/floral/: datasets.py  graph.py  loss.py  nn.py  util.py  visual.py
src/floral.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_loss.py
