[metadata]
name = floral
version = 1.0.3
author = Cameron Ryan
author_email = cjryanwashere@gmail.com
description = the best neural network library
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/cryanwashere/Flora
project_urls =
    repository = https://github.com/cryanwashere/Flora/flora
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    jax
    jaxlib

[options.packages.find]
where = src