[metadata]
name = floral
version = 1.0.3
author = Cameron Ryan
author_email = cjryanwashere@gmail.com
description = the best neural network library
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/cryanwashere/Floral
project_urls =
    repository = https://github.com/cryanwashere/Floral
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
zip_safe = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    jax
    jaxlib
    numpy 
    Pillow


[options.package_data]
floral = data/mnist_sprite.png, data/mnist_labels_uint8

[options.packages.find]
where = src